# Copyright (C) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/multimedia/av_codec/config.gni")

ohos_static_library("av_codec_engine_codeclist") {
  branch_protector_ret = "pac_ret"
  sanitize = av_codec_sanitize
  include_dirs = [
    "./",
    "$av_codec_root_dir/interfaces/inner_api/native",
    "$av_codec_root_dir/interfaces/kits/c",
    "$av_codec_root_dir/services/dfx/include",
    "$av_codec_root_dir/services/utils/include/",
    "$av_codec_root_dir/services/engine/base/include/",
    "$av_codec_root_dir/services/engine/codec/include/audio/",
    "$av_codec_root_dir/services/engine/codec/include/video/",
    "$av_codec_root_dir/services/engine/codec/video/fcodec",
    "$av_codec_root_dir/services/engine/codec/video/hevcdecoder",
    "$av_codec_root_dir/services/engine/common/include/",
    "$av_codec_root_dir/services/media_engine/plugins/ffmpeg_adapter/common/",
  ]
  defines = []
  if (av_codec_enable_special_codec) {
    defines += [ "AV_CODEC_AUDIO_VIVID_CAPACITY" ]
  }

  sources = [
    "$av_codec_root_dir/services/media_engine/plugins/ffmpeg_adapter/common/hdi_codec.cpp",
    "audio_codeclist_info.cpp",
    "codec_ability_singleton.cpp",
    "codeclist_builder.cpp",
    "codeclist_core.cpp",
  ]

  deps = [
    "$av_codec_root_dir/services/dfx:av_codec_service_dfx",
    "$av_codec_root_dir/services/utils:av_codec_service_utils",
  ]

  external_deps = [
    "drivers_interface_codec:libcodec_proxy_3.0",
    "ffmpeg:libohosffmpeg",
    "graphic_surface:surface",
    "graphic_surface:sync_fence",
    "hilog:libhilog",
    "media_foundation:media_foundation",
  ]

  subsystem_name = "multimedia"
  part_name = "av_codec"
}
