# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/test.gni")
import("//foundation/multimedia/av_codec/config.gni")
module_output_path = "av_codec/av_codec"
MEDIA_ROOT_DIR = "//foundation/multimedia/av_codec/"

##############################fuzztest##########################################
ohos_fuzztest("AudioDecoderResetFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file = "$MEDIA_ROOT_DIR/test/fuzztest/audiodecoderreset_fuzzer"
  include_dirs = [
    "$MEDIA_ROOT_DIR/test/fuzztest/audiodecoderreset_fuzzer",
    "$MEDIA_ROOT_DIR/test/nativedemo/avmuxer",
    "$MEDIA_ROOT_DIR/interfaces/kits/c",
    "$MEDIA_ROOT_DIR/interfaces/inner_api/native",
    "$MEDIA_ROOT_DIR/services/services/factory",
    "$MEDIA_ROOT_DIR/services/engine/plugin/common",
    "$MEDIA_ROOT_DIR/services/engine/plugin/core",
    "$MEDIA_ROOT_DIR/services/engine/plugin/interface",
    "$MEDIA_ROOT_DIR/frameworks/native/capi/common",
    "$MEDIA_ROOT_DIR/services/dfx/include",
    "$MEDIA_ROOT_DIR/services/engine/base/include",
    "$MEDIA_ROOT_DIR/services/engine/codec/include/video",
    "$MEDIA_ROOT_DIR/services/engine/common/include",
    "$MEDIA_ROOT_DIR/services/engine/source/hst_releated",
    "$MEDIA_ROOT_DIR/services/services/factory",
    "$MEDIA_ROOT_DIR/services/utils/include",
    "$MEDIA_ROOT_DIR/test/nativedemo/include",
  ]
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [
    "audio_decoder_reset_demo.cpp",
    "audio_decoder_reset_fuzzer.cpp",
  ]

  defines = []

  if (av_codec_enable_special_codec) {
    defines += [ "AV_CODEC_AUDIO_SPECIAL_CAPACITY" ]
  }

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_core",
    "media_foundation:media_foundation",
    "media_foundation:native_media_core",
    "window_manager:libwm",
  ]
  deps = [
    "$MEDIA_ROOT_DIR/interfaces/inner_api/native:av_codec_client",
    "$MEDIA_ROOT_DIR/interfaces/kits/c:capi_packages",
    "$MEDIA_ROOT_DIR/interfaces/kits/c:native_media_avmuxer",
    "$MEDIA_ROOT_DIR/interfaces/kits/c:native_media_avsource",
    "$MEDIA_ROOT_DIR/interfaces/kits/c:native_media_codecbase",
    "$MEDIA_ROOT_DIR/services/services:av_codec_service",
  ]
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    # deps file
    ":AudioDecoderResetFuzzTest",
  ]
}
###############################################################################
