# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/test.gni")
import("//foundation/multimedia/av_codec/config.gni")
module_output_path = "av_codec/av_codec"
MEDIA_ROOT_DIR = "//foundation/multimedia/av_codec/"

##############################fuzztest##########################################
ohos_fuzztest("DrmDecryptorFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file = "$MEDIA_ROOT_DIR/test/fuzztest/drmdecryptor_fuzzer"
  include_dirs = [ "$MEDIA_ROOT_DIR/services/drm_decryptor" ]
  defines = av_codec_defines
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  cflags_cc = [ "-fno-rtti" ]

  sources = [ "drmdecryptor_fuzzer.cpp" ]
  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "media_foundation:media_foundation",
  ]
  if (av_codec_support_drm) {
    external_deps += [
      "drm_framework:drm_framework",
      "drm_framework:native_drm",
    ]
  }
  deps = [ "$MEDIA_ROOT_DIR/interfaces/inner_api/native:av_codec_client" ]
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    # deps file
    ":DrmDecryptorFuzzTest",
  ]
}
###############################################################################
