# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/test.gni")
module_output_path = "av_codec/av_codec"
MEDIA_ROOT_DIR = "//foundation/multimedia/av_codec/"

##############################fuzztest##########################################
ohos_fuzztest("EncoderConfigureFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file = "$MEDIA_ROOT_DIR/test/fuzztest/encoderConfigure_fuzzer"
  include_dirs = [
    "$MEDIA_ROOT_DIR/interfaces/kits/c",
    "$MEDIA_ROOT_DIR/../../../third_party/openssl/ohos_lite/include",
    "$MEDIA_ROOT_DIR/test/moduletest/vcodec/encoder/include",
    "$MEDIA_ROOT_DIR/../../graphic/graphic_surface/surface/include",
    "$MEDIA_ROOT_DIR/../../graphic/graphic_2d/interfaces/inner_api",
    "$MEDIA_ROOT_DIR/../../graphic/graphic_surface/interfaces/inner_api",
    "$MEDIA_ROOT_DIR/../../graphic/graphic_surface/interfaces/inner_api/common",
  ]
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [
    "$MEDIA_ROOT_DIR/test/moduletest/vcodec/encoder/src/videoenc_ndk_sample.cpp",
    "encoderConfigure_fuzzer.cpp",
  ]

  external_deps = [
    "c_utils:utils",
    "graphic_2d:libgraphic_utils",
    "graphic_2d:librender_service_client",
    "graphic_surface:surface",
    "graphic_surface:sync_fence",
    "hilog:libhilog",
    "ipc:ipc_core",
    "media_foundation:capi_packages",
    "window_manager:libwm",
  ]
  deps = [
    "$MEDIA_ROOT_DIR/../../graphic/graphic_2d/rosen/modules/render_service_client:librender_service_client",
    "$MEDIA_ROOT_DIR/../../graphic/graphic_2d/utils:libgraphic_utils",
    "$MEDIA_ROOT_DIR/../../graphic/graphic_2d/utils:sync_fence",
    "$MEDIA_ROOT_DIR/../../graphic/graphic_surface/surface:surface",
    "$MEDIA_ROOT_DIR/../../window/window_manager/wm:libwm",
    "$MEDIA_ROOT_DIR/interfaces/inner_api/native:av_codec_client",
    "$MEDIA_ROOT_DIR/interfaces/kits/c:native_media_codecbase",
    "$MEDIA_ROOT_DIR/interfaces/kits/c:native_media_venc",
  ]
  resource_config_file =
      "$MEDIA_ROOT_DIR/test/moduletest/resources/ohos_test.xml"
}

group("fuzztest") {
  testonly = true
  deps = []

  deps += [
    # deps file
    ":EncoderConfigureFuzzTest",  #引用测试套
  ]
}
